Fix #518: stray line on checkbox on IE11

--- a/assets/sass/elements/forms/_form-multiple-choice.scss
+++ b/assets/sass/elements/forms/_form-multiple-choice.scss
@@ -88,6 +88,7 @@
     border: solid;
     border-width: 0 0 5px 5px;
     background: transparent;
+    border-top-color: transparent;
     width: 17px;
     height: 7px;
     position: absolute;
